2013-02-14

	* src/notificationwindow.c: adjusted paddings again.
	  plugin/test/test.c: modified notification test.

2013-02-13

	* src/notificationwindow.c: adjusted paddings.

2013-02-13

	* src/plugin.[ch]
	  src/notificationwindow.[ch]
	  src/main.c
	  plugin/test/test.c: added plug-in API for notification window.

2013-02-13

	* src/inc.c
	  src/notificationwindow.[ch]: notification_window_open():
	  changed from notification_window_create().
	  Ignore first notify event when fading start.

2013-02-08

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/inc.c: added option: 'Show notification window when new messages
	  arrive'

2013-02-08

	* src/inc.[ch]
	  src/notificationwindow.[ch]: implemented new message notification
	  popup window.

2013-02-01

	* nsis/*.{nsh,nsi}: translate Start Menu shortcuts.

2013-01-31

	* version 3.4.0beta1

2013-01-31

	* src/mainwindow.c: help_command_line_show(): updated command line
	  help.

2013-01-31

	* src/rpop3.c: do not disconnect immediately but send QUIT on normal
	  POP3 errors.
	  Changed 'Refresh' button/menu to 'Resume'.

2013-01-31

	* src/main.c: changed safe mode option to "--safe-mode".

2013-01-30

	* src/rpop3.c: made button sensitivity and Stop/Refresh label
	  consistent.

2013-01-25

	* libsylph/mh.c: mh_scan_tree_recursive(): limit the recursion level
	  to 64.

2013-01-25

	* src/prefs_filter_edit.c: prefs_filter_edit_action_hbox_to_action():
	  check the existence of destination folder.

2013-01-24

	* libsylph/pop.c
	  src/inc.c: do not disconnect immediately but send QUIT on normal
	  POP3 errors.
	* libsylph/pop.c: set Pop3Session::state to POP3_ERROR if QUIT
	  fail.

2013-01-22

	* src/main.c
	  src/plugin.c: added safe mode (don't load plug-ins).

2013-01-22

	* libsylph/folder.c
	  libsylph/news.c
	  libsylph/imap.c: escape server name when creating cache directory
	  path (fixes IPv6 address on Windows).

2013-01-22
