@@ -1,5 +1,12 @@
 2013-02-14
 
+	* libsylph/filter.c
+	  libsylph/prefs_common.[ch]
+	  src/prefs_common_dialog.c: added an option: "Do not classify message
+	  as junk if sender is in the address book" (#77).
+
+2013-02-14
+
 	* src/notificationwindow.c: adjusted paddings again.
 	  plugin/test/test.c: modified notification test.
 
